fix yggmail addresses overflowing on account list

--- a/scss/login/_login.scss
+++ b/scss/login/_login.scss
@@ -241,6 +241,12 @@ div.delta-form-group {
   .contact-list-item {
     .contact {
       width: 100%;
+      overflow: hidden;
+
+      .email {
+        display: inline-block;
+        width: 100%;
+      }
     }
 
     .remove-icon:hover {
